test/fail/exceptions/raise_imported.lly
#[
ex::error: Imported raise!
Traceback:
    File "raise_imported.lly", from __main__ at line 9
]#

import ex

raise ex::error::new("Imported raise!\n")
